Update index.html V1

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://unpkg.com/flowbite@1.4.0/dist/flowbite.js"></script>
-    <link rel="shortcut icon" href="D:\APPDEV-FL2\images\goldy-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images\goldy-removebg-preview.png" type="image/x-icon">
     <title>Rice Farms</title>
   </head>
   <body>
@@ -45,7 +45,7 @@
             </div>
             <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
               <div class="flex items-center">
-                <img class=" h-[80px] w-[80px]" src="D:\APPDEV-FL2\images\goldy-removebg-preview.png" alt="Your Company">
+                <img class=" h-[80px] w-[80px]" src="\images\goldy-removebg-preview.png" alt="Your Company">
               </div>
               <div class="sm:ml-6">
                 <div class="flex space-x-4 lg:py-7 lg:ml-[700px] sm:ml-[400px]">
@@ -176,7 +176,7 @@
             <!-- Image -->
             <div class=" section-container overflow-hidden ">
               <img 
-                src="D:\APPDEV-FL2\images\3EE4657D-B4CF-41BB-924BADF8641345D0_source.png"
+                src="images\3EE4657D-B4CF-41BB-924BADF8641345D0_source.png"
                 alt=""
                 class="md:absolute sm:h-[600px] lg:h-[800px] rounded-lg overflow-hidden mt-[-900px] left-[52.42%]"
               />
@@ -263,7 +263,7 @@
       <div class="section-container">
         <div class="flex flex-col items-center justify-between md:flex-row">
           <!-- Image -->
-          <img src="D:\APPDEV-FL2\images\goldy-removebg-preview.png" alt="" class="h-12 w-12" />
+          <img src="images\goldy-removebg-preview.png" alt="" class="h-12 w-12" />
           <!-- Container for Menus & Social -->
           <div class="flex flex-row items-center justify-between w-32 py-1 cursor-pointer">
             <a href="#"
