Update index.html v3

--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
             </div>
            
            
-            <button aria-controls="carousel" role="left-button" type="button" class="flex absolute top-0 left-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none" data-carousel-prev>
+            <button aria-controls="true" title="left" role="button" type="button" class="flex absolute top-0 left-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none" data-carousel-prev>
                 <span class="inline-flex justify-center items-center w-8 h-8 rounded-full sm:w-10 sm:h-10 group-focus:ring-4 group-focus:ring-white  group-focus:outline-none">
                     <svg class="w-5 h-5 sm:w-6 sm:h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
                 </span>
             </button>
-            <button aria-controls="carousel" role="right-button" type="button" class="flex absolute top-0 right-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none" data-carousel-next>
+            <button aria-controls="true" title="right" role="button" type="button" class="flex absolute top-0 right-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none" data-carousel-next>
                 <span class="inline-flex justify-center items-center w-8 h-8 rounded-full sm:w-10 sm:h-10 0 group-focus:ring-4 group-focus:ring-white  group-focus:outline-none">
                     <svg class="w-5 h-5  sm:w-6 sm:h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg>
                 </span>
@@ -300,13 +300,13 @@
                   alt=""
                   class="duration-200 ficon"
               /></a>
-              <a aria-label="button1" href="#"
+              <a aria-label="button2" href="#"
                 ><img
                   src="images/icon-twitter.svg"
                   alt=""
                   class="duration-200 ficon"
               /></a>
-              <a aria-label="button1" href="#"
+              <a aria-label="button3" href="#"
                 ><img
                   src="images/icon-instagram.svg"
                   alt=""
