Update index.html v5

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
           </section>
           <!--footerr-->
      <footer class="bg-black text-white">
-      <div class="section-container">
+      <div class="section section-container">
         <div class="flex flex-col place-content-center items-center justify-between md:flex-row">
           <!-- Image -->
           <img src="images\goldy-removebg-preview.png" alt="" class="scale-50" />
@@ -293,20 +293,20 @@
             </div>
 
             <!-- Social Icons -->
-            <div aria-label="button1" class="flex justify-between w-32 py-1">
+            <div aria-label=" its to button facebook" class="flex justify-between w-32 py-1">
               <a href="#"
                 ><img
                   src="images/icon-facebook.svg"
                   alt=""
                   class="duration-200 ficon"
               /></a>
-              <a aria-label="button2" href="#"
+              <a aria-label=" its to button twitter" href="#"
                 ><img
                   src="images/icon-twitter.svg"
                   alt=""
                   class="duration-200 ficon"
               /></a>
-              <a aria-label="button3" href="#"
+              <a aria-label=" its to button instagram" href="#"
                 ><img
                   src="images/icon-instagram.svg"
                   alt=""
